# ai-programming-agent

./: .dockerignore  .gitignore  ASTRAL_MODULE_SPLIT.md  CMakeLists.txt  Jenkinsfile  README.md  _s.json  _t.json  _w.json  build_all.bat  build_astral.bat  build_sys.bat  build_txt.bat  sonar-project.properties  todo_list.txt  vcpkg.json  workfolder_history.json
.VSCodeCounter/2026-07-14_15-55-06/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-07-14_15-55-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-07-14_15-56-23/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-07-14_15-57-00/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-07-14_15-59-14/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: package.yml
apps/agent-server/: AppBootstrap.cpp  CMakeLists.txt  InternalConsole.cpp  InternalConsole.h  main.cpp
apps/cli-client/: ApiClient.cpp  ApiClient.h  CMakeLists.txt  CliController.cpp  CliController.h  EventPrinter.cpp  EventPrinter.h  main.cpp
apps/tool-tests/: tool_test_main.cpp
apps/tui-client/: CMakeLists.txt  TuiApplication.cpp  main.cpp
apps/webview2-shell/: CMakeLists.txt  ProcessGuard.cpp  ProcessGuard.h  ShellWindow.cpp  ShellWindow.h  main.cpp
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  CodePilot.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
config/: agent.json  agent_roles.json  experts.json  llm.json  llm.local.example.json  logging.json  tools.json  workspace.json
core/: agent.cpp.old  agent.hpp  agent_exec.cpp  agent_interact.cpp  agent_policy.cpp  agent_types.hpp  cli_builtins.cpp  cli_builtins.hpp  shell.cpp  shell.hpp  skill_loader.cpp  skill_loader.hpp  util.hpp
deploy/ansible/: inventory.yml  playbook.yml
deploy/docker/: Dockerfile  Dockerfile.web  docker-compose.yml  nginx-frontend.conf
deploy/installer/: setup.iss
deploy/jenkins/: Jenkinsfile
docs/: Expert配置说明文档.md  SSEGateway设计文档.md  Windows安装包打包指南.md  Windows构建指南.md  优化内容通知.md  优化问题跟踪.md  全API参照表.md  内部控制台使用指南.md  分工安排.md  前后端数据传输协议规范.md  前端z-index层级宪法.md  前端事件协议规范文档.md  封装状态.md  工具系统接口参考.md  技术栈说明.md  接口文档.md  整体架构说明.md  日志系统使用指南.md  最终报告.md  架构审查_并行开发分析.md  架构门面化重构方案.md  环境配置说明.md  配置协议接口文档.md  重新配置说明.md  长对话上下文持久化机制.md
frontend/api-client/: AgentApiClient.cpp  AgentApiClient.h  EventStreamClient.cpp  EventStreamClient.h
frontend/app/: TuiApplication.cpp
frontend/components/: DiffViewer.cpp  InputBox.cpp  LogPanel.cpp  MessageList.cpp  StatusPanel.cpp
frontend/new-web/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/new-web-v2/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/state/: EventStore.cpp  TaskStateModel.cpp  UiState.cpp
frontend/views/: ChatView.cpp  HistoryView.cpp  PermissionDialog.cpp  TaskView.cpp  ToolOutputView.cpp  WorkspaceView.cpp
frontend/web/: index.html  main.js  package-lock.json  package.json  styles.css  vite.config.ts
memories/: main.memgraph
protocol/: skill_protocol.md
resources/: default_config.json
runtime/: api_client.cpp  api_client.hpp  context_manager.cpp  context_manager.hpp  output_formatter.cpp  output_formatter.hpp  xml_protocol.cpp  xml_protocol.hpp
scripts/: build-all.ps1  build-frontend.ps1  format.sh  package.ps1  run.sh  test-backend-api.ps1  test-backend-cancellation.ps1  test-backend-concurrency.ps1  test-backend-llm-failure.ps1  test-backend-sqlite-migration.ps1  test-backend-sse.ps1  test-backend-startup.ps1  test-backend.ps1  test-workspace-file-save.ps1
skill_src/: skill_calc_main.cpp  skill_mask_main.cpp  skill_mem_main.cpp  skill_sys_main.cpp  skill_txt_main.cpp
skills/: analyser.json  calc.json  chat.json  dispatcher.json  mask_manager.json  memory.json  plan_dispatcher.json  sys.json  txt.json
skills/cmake-build/: run.sh  skill.json
skills/code-format/: run.sh  skill.json
skills/cpp-test/: run.sh  skill.json
source/: main.cpp
src/: main.cpp
src/core/: agent.cpp  agent.h  context.cpp  context.h  llm_client.cpp  llm_client.h  permission.cpp  permission.h
src/storage/: config.cpp  config.h  database.cpp  database.h  logger.cpp  logger.h
src/tools/: file_tools.cpp  file_tools.h  itool.h  mcp_client.cpp  mcp_client.h  registry.cpp  registry.h  shell_tools.cpp  shell_tools.h  skill_manager.cpp  skill_manager.h  web_tools.cpp  web_tools.h
src/tui/: app.cpp  app.h  chat_panel.cpp  chat_panel.h  markdown_render.cpp  markdown_render.h  tool_panel.cpp  tool_panel.h
src/utils/: http_client.cpp  http_client.h  token_counter.cpp  token_counter.h
storage/: agent.db  agent.db-shm  agent.db-wal
tests/: CMakeLists.txt  test_agent_loop.cpp  test_process_runner.cpp
tests/fixtures/: README.md
tests/integration/: README.md  sqlite_integrity_check.cpp  sqlite_migration_test_helper.cpp
tests/unit/: test_agent_configuration_save.cpp  test_context.cpp  test_llm_provider_config.cpp  test_permission.cpp  test_process_runner.cpp  test_task_recovery.cpp  test_temp_runtime.cpp  test_tool_registry.cpp
workspace/: binary_search.cpp  bubble_sort.py  dfs_template.cpp  dijkstra.py  insertion_sort.py  shortest_path.py
workspace/3d-cube-renderer/: main.cpp  main_lighting.cpp
workspace/game-test/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp  PositionComponent.cpp  PositionComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  main.cpp  test_player.cpp
workspace/tetris-game/: Game.cpp  Game.h  Tetromino.h  main.cpp
workspace/杂项/: binary_search.py  bubble_sort  bubble_sort.cpp  merge_sort.py  (+2 more)
(+386 files in other folders)
